--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,37 @@
 	<name>dotJava</name>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>21</java.version>
+		<!--<javafx.version>17.0.6</javafx.version>
+		 <javafx.maven.plugin.version>0.0.8</javafx.maven.plugin.version>-->
 	</properties>
+
+	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.34</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<!--JavaFX is used to demo a UI for the ReentrantLock the class involved is  -->
+		<dependency>
+			<groupId>org.openjfx</groupId>
+			<artifactId>javafx-controls</artifactId>
+			<!--<version>${javafx.version}</version>
+			<artifactId>javafx</artifactId>-->
+			<version>11</version>
+			<type>pom</type>
+		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.2</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
 
 	<build>
@@ -16,7 +46,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
+				<version>3.8.1</version>
 				<configuration>
 					<source>21</source>
 					<target>21</target>
@@ -25,6 +55,17 @@
 					<showDeprecation>true</showDeprecation>
 				</configuration>
 			</plugin>
+
+
+			<!--<plugin>
+				<groupId>org.openjfx</groupId>
+				<artifactId>javafx-maven-plugin</artifactId>
+				<version>${javafx.maven.plugin.version}</version>
+				<configuration>
+					<mainClass>org.shandar.dotJava.udemy.MichaelPogrebinsky.advancelocks.FinancialAssetsUIJavaFX</mainClass>
+				</configuration>
+			</plugin>-->
+
 		</plugins>
 	</build>
 
